tests/machine/x/ts/map_membership.error
line 0: run: exit status 1
[0m[1m[31merror[0m: Uncaught (in promise) TypeError: m.includes is not a function
console.log((m.includes("a")));
[0m[31m               ^[0m
    at [0m[36mfile:///workspace/mochi/tests/machine/x/ts/map_membership.ts[0m:[0m[33m2[0m:[0m[33m16[0m

let m = {a: 1, b: 2};
