tests/machine/x/ts/map_membership.ts
let m = {a: 1, b: 2};
console.log((m.includes("a")));
console.log((m.includes("c")));
